tests/toylang/neg/001197_mutation.toylang
program a = { program a = { } . while a do sleep; } .
